--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container h-100 d-flx flx-vcenter">
       <div class="logo">
         <a href="./">
-          <img src="/assets/images/CreateBiz.png" alt="">
+          <img src="assets/images/CreateBiz.png" alt="">
         </a>
       </div>
       <div class="header-right ml-auto d-flx flx-vcenter">
@@ -148,6 +148,25 @@
         </div>
       </div>
      </div>
+    </section>
+
+    <section class="home-services">
+      <div class="container">
+        <div class="service-top">
+          <div class="row">
+            <div class="col-lg-6">
+              <h4 class="ttl ttl-20 sub-title">Affiliated Services</h4>
+              <h2 class="ttl ttl-40 title">Need Support For Your Existing Business?
+              </h2>
+            </div>
+            <div class="col-lg-6">
+              <p>We also assist your existing businesses to navigate through end to end corporate services.
+              </p>
+              <a href="">View All</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
 
