--- a/index.html
+++ b/index.html
@@ -162,11 +162,124 @@
             <div class="col-lg-6">
               <p>We also assist your existing businesses to navigate through end to end corporate services.
               </p>
-              <a href="">View All</a>
+              <a href="" class="btn btn-primary">
+                <span>View All</span>
+                <span class="arrow"></span>
+              </a>
+            </div>
+            
+          </div>
+        </div>
+        <div class="service-list">
+         <div class="row">
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="icon">
+
+              </div>
+              <div class="info">
+                <h4 class="ttl title">Digital Products</h4>
+                <p>Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity. Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity for the perfects.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="icon">
+
+              </div>
+              <div class="info">
+                <h4 class="ttl title">Digital Products</h4>
+                <p>Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity. Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity for the perfects.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="icon">
+
+              </div>
+              <div class="info">
+                <h4 class="ttl title">Digital Products</h4>
+                <p>Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity. Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity for the perfects.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="icon">
+
+              </div>
+              <div class="info">
+                <h4 class="ttl title">Digital Products</h4>
+                <p>Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity. Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity for the perfects.</p>
+              </div>
+            </div>
+          </div>
+         </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="home-about">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="fun-fact-list">
+                <ul class="achivement">
+                    <li>
+                        <div class="fun-fact">
+                            <div class="counter">
+                                <div class="timer" data-to="360" data-speed="5000">360</div>
+                                <div class="operator">K</div>
+                            </div>
+                            <span class="medium">World Customer</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="fun-fact">
+                            <div class="counter">
+                                <div class="timer" data-to="100" data-speed="5000">100</div>
+                                <div class="operator">%</div>
+                            </div>
+                            <span class="medium">Positive Rating</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="fun-fact">
+                            <div class="counter">
+                                <div class="timer" data-to="874" data-speed="5000">874</div>
+                                <div class="operator">+</div>
+                            </div>
+                            <span class="medium">Total Branch</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="content">
+                <h4 class="ttl ttl-20 sub-title">Why Trust CreateBiz</h4>
+                <h2 class="ttl ttl-40 title">Take Your First Step with Your Trusted Partner</h2>
+                <p>We believe that the foundation of every successful business relationship is a perfect rapport built on trust and ease of communication. We are business advisors who prioritize this connection, providing straightforward and honest guidance to help our clients succeed.</p>
+                <div class="row align-items-center">
+                  <div class="col-lg-6">
+                    <ul>
+                      <li>Free Consultation 24/7</li>
+                      <li>One to One Approach</li>
+                      <li>Transparency </li>
+                     </ul>
+                  </div>
+                  <div class="col-lg-6">
+                    <h4 class="ttl experince">25
+                      <span>Years of experience</span>
+                    </h4>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
     </section>
 
 
