--- a/index.html
+++ b/index.html
@@ -282,6 +282,70 @@
         </div>
     </section>
 
+    <section class="home-contact-faq">
+       <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="contact">
+              <h2 class="ttl ttl-40 title">From Concept to Business Setup</h2>
+              <p>Mirth his quick its set front enjoy hoped had there. Who connection imprudence middletons too but increasing celebrated principles joy. Herself too improve gay winding ask expense are compact.</p>
+              <ul>
+                <li>Date Exchange</li>
+                <li>Content Managment</li>
+                <li>Workflow</li>
+                <li>Business Digital</li>
+              </ul>
+              <a href="" class="btn btn-primary">
+                <span>View All</span>
+                <span class="arrow"></span>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="faq">
+              <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="ttl accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Accordion Item #1
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="ttl accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Accordion Item #2
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="ttl accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Accordion Item #3
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+       </div>
+    </section>
 
 
   </main>
@@ -290,7 +354,7 @@
       <div class="row">
         <div class="col-lg-5">
           <div class="footer-about">
-            <h4 class="footer-about-title">About Us</h4>
+            <h4 class="ttl footer-about-title">About Us</h4>
             <p>Required honoured trifling eat pleasure man relation. Assurance yet bed was improving furniture man.
               Distrusts delighted Excuse few the remain highly feebly add people manner say. It high at my mind by roof.
             </p>
@@ -299,7 +363,7 @@
         <div class="col-lg-7">
           <div class="footer-menu">
             <div class="menu-items">
-              <h4 class="menu-title">Services</h4>
+              <h4 class="ttl menu-title">Services</h4>
               <ul>
                 <li><a href="">servi 1</a></li>
                 <li><a href="">servi 2</a></li>
@@ -307,19 +371,26 @@
               </ul>
             </div>
             <div class="menu-items">
-              <h4 class="menu-title">Services</h4>
+              <h4 class="ttl menu-title">Company</h4>
               <ul>
-                <li><a href="">servi 1</a></li>
-                <li><a href="">servi 2</a></li>
-                <li><a href="">servi 3</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Faq</a></li>
+                <li><a href="">Contact</a></li>
               </ul>
             </div>
             <div class="menu-items">
-              <h4 class="menu-title">Services</h4>
+              <h4 class="ttl menu-title">Contact Us</h4>
               <ul>
-                <li><a href="">servi 1</a></li>
-                <li><a href="">servi 2</a></li>
-                <li><a href="">servi 3</a></li>
+                <li>
+                  <strong>Address</strong>
+                 <span>California, TX 70240</span>
+                <li>
+                  <strong>Email</strong>
+                  <a href="mailto:">support@createbiz.com</a></li>
+                <li>
+                  <strong>Contact</strong>
+                  <a href="tel:">+44-20-7328-4499</a></li>
               </ul>
             </div>
           </div>
@@ -328,11 +399,12 @@
       <div class="footer-bottom">
         <p>© Copyright 2021. All Rights Reserved</p>
         <figure class="footer-logo">
-          <img src="" alt="">
+          <img src="assets/images/createBix-sm.png" alt="logo">
         </figure>
-        <div>
-
-        </div>
+        <form class="form">
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          <button class="submit">></button>
+        </form>
       </div>
     </div>
   </footer>
