--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <header class="main-header">
-    <div class="container h-100 d-flx flx-vcenter">
+    <div class="header-container h-100 d-flx flx-vcenter">
       <div class="logo">
         <a href="./">
           <img src="assets/images/CreateBiz.png" alt="">
