--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <div class="header-right ml-auto d-flx flx-vcenter">
         <nav class="main-nav">
           <ul>
-            <li><a class="active" href="./">Home</a></li>
-            <li><a href="/business-setup.html">Business Setup</a>
+            <li><a class="active" href="/">Home</a></li>
+            <li><a href="business-setup.html">Business Setup</a>
               <ul>
-                <li><a href="">Minland </a>
+                <li><a href="business-setup/minland.html">Minland </a>
 
                 </li>
                 <li><a href="">Freezone</a></li>
@@ -36,19 +36,19 @@
 
               </ul>
             </li>
-            <li><a href="/affiliated-services.html">Affiliated Services</a></li>
+            <li><a href="affiliated-services.html">Affiliated Services</a></li>
             <li><a href="/about-us.html">About</a></li>
             <li><a href="">Resources</a>
               <ul>
-                <li><a href="">Blog</a>
+                <li><a href="blog.html">Blog</a>
 
                 </li>
-                <li><a href="">FAQ</a></li>
+                <li><a href="faq.html">FAQ</a></li>
 
               </ul>
             </li>
 
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
