--- a/business-setup.html
+++ b/business-setup.html
@@ -22,37 +22,37 @@
   <header class="main-header">
     <div class="header-container h-100 d-flx flx-vcenter">
       <div class="logo">
-        <a href="./">
+        <a href="/">
           <img src="assets/images/CreateBiz.png" alt="">
         </a>
       </div>
       <div class="header-right ml-auto d-flx flx-vcenter">
         <nav class="main-nav">
           <ul>
-            <li><a class="active" href="./">Home</a></li>
-            <li><a href="/business-setup.html">Business Setup</a>
+            <li><a class="active" href="/">Home</a></li>
+            <li><a href="business-setup.html">Business Setup</a>
               <ul>
-                <li><a href="/business-setup/minland.html">Minland </a>
+                <li><a href="business-setup/minland.html">Minland </a>
 
                 </li>
-                <li><a href="/business-setup/freezone.html">Freezone</a></li>
-                <li><a href="/business-setup/offshore.html">Offshore</a></li>
+                <li><a href="business-setup/freezone.html">Freezone</a></li>
+                <li><a href="business-setup/offshore.html">Offshore</a></li>
 
               </ul>
             </li>
-            <li><a href="/affiliated-services.html">Affiliated Services</a></li>
-            <li><a href="/about-us">About</a></li>
+            <li><a href="affiliated-services.html">Affiliated Services</a></li>
+            <li><a href="about-us.html">About</a></li>
             <li><a href="">Resources</a>
               <ul>
-                <li><a href="/blog.html">Blog</a>
+                <li><a href="blog.html">Blog</a>
 
                 </li>
-                <li><a href="/faq.html">FAQ</a></li>
+                <li><a href="faq.html">FAQ</a></li>
 
               </ul>
             </li>
 
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
