--- a/business-setup/minland.html
+++ b/business-setup/minland.html
@@ -22,14 +22,14 @@
   <header class="main-header">
     <div class="header-container h-100 d-flx flx-vcenter">
       <div class="logo">
-        <a href="./">
+        <a href="/">
           <img src="../assets/images/CreateBiz.png" alt="">
         </a>
       </div>
       <div class="header-right ml-auto d-flx flx-vcenter">
         <nav class="main-nav">
             <ul>
-              <li><a class="active" href="./">Home</a></li>
+              <li><a class="active" href="/">Home</a></li>
               <li><a href="/business-setup.html">Business Setup</a>
                 <ul>
                   <li><a href="/business-setup/minland.html">Minland </a>
@@ -41,7 +41,7 @@
                 </ul>
               </li>
               <li><a href="/affiliated-services.html">Affiliated Services</a></li>
-              <li><a href="/about-us">About</a></li>
+              <li><a href="/about-us.html">About</a></li>
               <li><a href="">Resources</a>
                 <ul>
                   <li><a href="/blog.html">Blog</a>
@@ -91,10 +91,7 @@
   
         </div>
       </section>
-      <div class="container">
-
-        
-      </div>
+   
 
     <!------------minland details----------------->
    
@@ -137,6 +134,57 @@
           </div>
      </section>
 
+      <!------------minland faq----------------->
+     <section class="mainfaq">
+        <div class="container">
+         <h2 class="ttl ttl-40 title">Freequently Asked Questions
+         </h2>
+         <div class="faq">
+           <div class="accordion" id="accordionExample">
+             <div class="accordion-item">
+               <h2 class="accordion-header" id="headingOne">
+                 <button class="ttl accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                   Accordion Item #1
+                 </button>
+               </h2>
+               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                 <div class="accordion-body">
+                   <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about.
+                 </div>
+               </div>
+             </div>
+             <div class="accordion-item">
+               <h2 class="accordion-header" id="headingTwo">
+                 <button class="ttl accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                   Accordion Item #2
+                 </button>
+               </h2>
+               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                 <div class="accordion-body">
+                   <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about.
+                 </div>
+               </div>
+             </div>
+             <div class="accordion-item">
+               <h2 class="accordion-header" id="headingThree">
+                 <button class="ttl accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                   Accordion Item #3
+                 </button>
+               </h2>
+               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                 <div class="accordion-body">
+                   <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <a href="" class="btn btn-primary">
+           <span>View All</span>
+           <span class="arrow"></span>
+         </a>
+        </div>
+     </section>
    
 
     <!------------home contact----------------->
