--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 <li><a href="business-setup/minland.html">Minland </a>
 
                 </li>
-                <li><a href="">Freezone</a></li>
-                <li><a href="">Offshore</a></li>
+                <li><a href="business-setup/freezone.html">Freezone</a></li>
+                <li><a href="business-setup/offshore.html">Offshore</a></li>
 
               </ul>
             </li>
             <li><a href="affiliated-services.html">Affiliated Services</a></li>
-            <li><a href="/about-us.html">About</a></li>
+            <li><a href="about-us.html">About</a></li>
             <li><a href="">Resources</a>
               <ul>
                 <li><a href="blog.html">Blog</a>
@@ -328,7 +328,7 @@
         </div>
     </section>
 
-    <section class="home-faq">
+    <section class="mainfaq">
        <div class="container">
         <h2 class="ttl ttl-40 title">Freequently Asked Questions
         </h2>
