--- a/business-setup.html
+++ b/business-setup.html
@@ -248,55 +248,41 @@
        <div class="container">
         <h2 class="ttl ttl-40 title">Process of Business Setup in UAE?
         </h2>
-        <div class="business-process-steps">
-          <div class="card">
-            <div class="head">
-              <strong>Step 1</strong>
-            </div>
-            <div class="info">
-              <p></p>
-            </div>
+        <div class="timeline hide-line">
+          <div class="timeline-container left">
+            <a href="#" class="content-link">
+              <div class="content">
+                <span class="icon"><i class="fas fa-map-marked-alt"></i></span> Explore the dummy map
+              </div>
+            </a>
           </div>
-          <span class="arrow">
-            <i class="fa-solid fa-arrow-right"></i>
-          </span>
-          <div class="card">
-            <div class="head">
-              <strong>Step 2</strong>
-            </div>
-            <div class="info">
-              <p></p>
-            </div>
+          <div class="timeline-container right">
+            <a href="#" class="content-link">
+              <div class="content">
+                <span class="icon"><i class="fas fa-filter"></i></span> Filter dummy results
+              </div>
+            </a>
           </div>
-          <span class="arrow">
-            <i class="fa-solid fa-arrow-right"></i>
-          </span>
-          <div class="card">
-            <div class="head">
-              <strong>Step 3</strong>
-            </div>
-            <div class="info">
-              <p></p>
-            </div>
+          <div class="timeline-container left">
+            <a href="#" class="content-link">
+              <div class="content">
+                <span class="icon"><i class="fas fa-user"></i></span> View dummy profiles
+              </div>
+            </a>
           </div>
-          <div class="card">
-            <div class="head">
-              <strong>Step 4</strong>
-            </div>
-            <div class="info">
-              <p></p>
-            </div>
+          <div class="timeline-container right">
+            <a href="#" class="content-link">
+              <div class="content">
+                <span class="icon"><i class="fas fa-phone-alt"></i></span> Schedule a dummy session
+              </div>
+            </a>
           </div>
-          <span class="arrow">
-            <i class="fa-solid fa-arrow-right"></i>
-          </span>
-          <div class="card">
-            <div class="head">
-              <strong>Step 5</strong>
-            </div>
-            <div class="info">
-              <p></p>
-            </div>
+          <div class="timeline-container left">
+            <a href="#" class="content-link">
+              <div class="content">
+                <span class="icon"><i class="fas fa-heart"></i></span> Get dummy results
+              </div>
+            </a>
           </div>
         </div>
        </div>
