--- a/business-setup/minland.html
+++ b/business-setup/minland.html
@@ -97,42 +97,81 @@
    
      <section class="minland-details">
           <div class="container">
+            <p>Locations we assists</p>
             <div class="d-flex align-items-start">
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                  <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                    Home
+                  <button class="nav-link active" id="v-pills-Dubai-tab" data-bs-toggle="pill" data-bs-target="#v-pills-Dubai" type="button" role="tab" aria-controls="v-pills-Dubai" aria-selected="true">
+                    Dubai 
                     <i class="fa-solid fa-chevron-right"></i>
                 </button>
-                  <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">
-                    Profile
+                  <button class="nav-link" id="v-pills-Sharja-tab" data-bs-toggle="pill" data-bs-target="#v-pills-Sharja" type="button" role="tab" aria-controls="v-pills-Sharja" aria-selected="false">
+                    Sharja
                     <i class="fa-solid fa-chevron-right"></i>
                 </button>
-                  <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">
-                    Messages
+                  <button class="nav-link" id="v-pills-Ajman-tab" data-bs-toggle="pill" data-bs-target="#v-pills-Ajman" type="button" role="tab" aria-controls="v-pills-Ajman" aria-selected="false">
+                    Ajman
                     <i class="fa-solid fa-chevron-right"></i>
                 </button>
-                  <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">
-                    Settings
+                  <button class="nav-link" id="v-pills-Abu-Dhabi-tab" data-bs-toggle="pill" data-bs-target="#v-pills-Abu-Dhabi" type="button" role="tab" aria-controls="v-pills-Abu-Dhabi" aria-selected="false">
+                    Abu Dhabi
                     <i class="fa-solid fa-chevron-right"></i>
                 </button>
+                <form class="inner-form">
+                  <h3 class="ttl title">Enquire</h3>
+                  <div class="mb-4">
+                    <input type="text" class="form-control"  placeholder="Full Name">
+                  </div>
+                  <div class="mb-4">
+                    <input type="email" class="form-control"  placeholder="Email">
+                  </div>
+                  <div class="mb-4">
+                    <input type="tel" class="form-control" placeholder="Mobile">
+                  </div>
+                  <div class="mb-4">
+                    <select class="form-select">
+                      <option>select Option</option>
+                      <option>Option 1</option>
+                      <option>Option 2</option>
+                      <option>Option 3</option>
+                    </select>
+                  </div>
+                
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
                 </div>
                 <div class="tab-content" id="v-pills-tabContent">
-                  <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
+                  <div class="tab-pane fade show active" id="v-pills-Dubai" role="tabpanel" aria-labelledby="v-pills-Dubai-tab" tabindex="0">
                     <figure>
                         <img src="../assets/images/business/inner-img.jpg" alt="">
                     </figure>
                     <h2 class="ttl ttl-40 title">Why set up your company in mainland, Dubai</h2>
                   </div>
-                  <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
+                  <div class="tab-pane fade" id="v-pills-Sharja" role="tabpanel" aria-labelledby="v-pills-Sharja-tab" tabindex="0">
                     vvv
                   </div>
-                  <div class="tab-pane fade" id="v-pills-disabled" role="tabpanel" aria-labelledby="v-pills-disabled-tab" tabindex="0">...</div>
-                  <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">...</div>
-                  <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">...</div>
+                  <div class="tab-pane fade" id="v-pills-Sharja" role="tabpanel" aria-labelledby="v-pills-Sharja-tab" tabindex="0">...</div>
+                  <div class="tab-pane fade" id="v-pills-Ajman" role="tabpanel" aria-labelledby="v-pills-Ajman-tab" tabindex="0">...</div>
+                  <div class="tab-pane fade" id="v-pills-Abu-Dhabi" role="tabpanel" aria-labelledby="v-pills-Abu-Dhabi-tab" tabindex="0">...</div>
                 </div>
               </div>
           </div>
      </section>
+
+
+     <section class="minland-lisence">
+          <div class="container">
+            <h2 class="ttl ttl-40 title">How to get the right Dubai mainland license
+            </h2>
+          </div>
+     </section>
+
+
+     <section class="minland-lisence">
+      <div class="container">
+        <h2 class="ttl ttl-40 title">Find Minland Business Activities
+        </h2>
+      </div>
+ </section>
 
       <!------------minland faq----------------->
      <section class="mainfaq">
