--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
         <div class="row align-items-center">
           <div class="col-lg-7">
             <div class="content">
-              <h1 class="ttl ttl-50 title">Your Trusted Advisor for Business Setup in the UAE </h1>
-              <p>We value strong client relationships, offering a straightforward, professional approach to ensure a
-                simplified business setup process.</p>
+              <h1 class="ttl ttl-50 title">Expert Business Setup Consultant in UAE </h1>
+              <p>Leverage our expertise to start your business in the UAE seamlessly and without hassles. We follow lofty ideals of professionalism, transparency, and ethics to forge and nourish lifelong relationships with clients.</p>
               <a href="" class="btn cta-btn">
                 <span class="btn-circle">
                   <div class="icon arrow"></div>
                 </span>
-                <span class="btn-text">Talk to our Advisor</span>
+                <span class="btn-text">Tell Us What You Need</span>
               </a>
               <a href="" class="btn btn-link">Explore our packages</a>
             </div>
@@ -91,10 +90,9 @@
     <section class="home-business-setup">
      <div class="container">
       <h4 class="ttl ttl-18 sub-title">Business Setup In UAE</h4>
-      <h2 class="ttl ttl-40 title">From Concept to Business Setup
+      <h2 class="ttl ttl-40 title">From Ideation to Execution
       </h2>
-      <p>We just simplify paperworks to amplify your business. We help you set up your business with proper analysis of
-        your business model and your requirements. </p>
+      <p>We provide personalized end-to-end business setup services, including documentation and administrative services that will help you navigate the complexities of business setup and optimize operations. </p>
       <div class="business-card-wrap">
         <div class="row">
           <div class="col-lg-4">
@@ -197,11 +195,11 @@
           <div class="row">
             <div class="col-lg-6">
               <h4 class="ttl ttl-18 sub-title">Affiliated Services</h4>
-              <h2 class="ttl ttl-40 title">Need Support For Your Existing Business?
+              <h2 class="ttl ttl-40 title">Learn What we can do to support your business.
               </h2>
             </div>
             <div class="col-lg-6">
-              <p>We also assist your existing businesses to navigate through end to end corporate services.
+              <p>If you already have a business in the UAE, CreateBiz has a suite of services to support you, and help you operate it smoothly. Drive growth and efficiency and gain a competitive edge in the industry.
               </p>
               <a href="" class="btn btn-primary">
                 <span>View All</span>
@@ -219,8 +217,8 @@
 
               </div>
               <div class="info">
-                <h4 class="ttl title">Corporate Tax & VAT </h4>
-                <p>Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity. Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity for the perfects.</p>
+                <h4 class="ttl title">PRO Services</h4>
+                <p>Get reliable and efficient representative to liaise and coordinate with government agencies, who will handle and simplify all the documentation process while you focus on your core tasks. Our cost-effective services ensure that all formalities including approvals and procedures are smoothly executed by a dedicated PRO.</p>
               </div>
             </div>
           </div>
@@ -230,8 +228,8 @@
 
               </div>
               <div class="info">
-                <h4 class="ttl title">Bank Account Opening</h4>
-                <p>Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity. Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity for the perfects.</p>
+                <h4 class="ttl title">Visa Services </h4>
+                <p>Our rich experience and familiarity with the types of visas and the procedures for obtaining them guarantee that you get your visas in time and without hassles. We offer handholding for the entire process, especially the substantial documentation. </p>
               </div>
             </div>
           </div>
@@ -241,8 +239,8 @@
 
               </div>
               <div class="info">
-                <h4 class="ttl title">Accounting & Payroll</h4>
-                <p>Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity. Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity for the perfects.</p>
+                <h4 class="ttl title">Trade License</h4>
+                <p>Knowing which trade license to apply for your business can be confusing and overwhelming. Our reliable services will help you submit your application in a timely manner and obtain the license </p>
               </div>
             </div>
           </div>
@@ -252,11 +250,45 @@
 
               </div>
               <div class="info">
-                <h4 class="ttl title">Compliance Services</h4>
-                <p>Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity. Preferred joy agreement put continual elsewhere delivered now. Mrs exercise felicity for the perfects.</p>
+                <h4 class="ttl title">Bank Account Setup</h4>
+                <p>Our expert services help you navigate the complex and stringent regulatory process of opening a bank account without delays or problems, allowing you to begin business activities immediately. After a speedy evaluation, we will liaise with the chosen bank, and complete the documentation required for account opening.</p>
               </div>
             </div>
           </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="icon">
+
+              </div>
+              <div class="info">
+                <h4 class="ttl title">Liquidation</h4>
+                <p>Liquidation of your company is a highly structured process; CreateBiz can ensure a smooth execution of this process and help you wind up your business with our expert services. Whether it’s making payments to various stakeholders, or handling the documentation cancellation, our expertise will ensure that it is done swiftly and painlessly.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="icon">
+
+              </div>
+              <div class="info">
+                <h4 class="ttl title">VAT & Accounting</h4>
+                <p>Our qualified accountants help you to efficiently manage your payroll, accounting, and finances. We provide a wide range of services like bookkeeping, VAT reports, reconciliation, audit support, payroll, and financial reporting. We guarantee precise and up-to-date records of all financial transactions, empowering you to make informed decisions, cost planning, and performance measurement.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="icon">
+
+              </div>
+              <div class="info">
+                <h4 class="ttl title">Company Auditing</h4>
+                <p>Qualified and approved auditors will audit your books of account to ensure transparency and compliance with regulations. Know the financial health of your company accurately, analyze patterns, and make forecasts that can help you grow your business.</p>
+              </div>
+            </div>
+          </div>
+         
          </div>
          <a href="" class="btn btn-primary">
           <span>View All</span>
@@ -304,9 +336,9 @@
             </div>
             <div class="col-lg-6">
               <div class="content">
-                <h4 class="ttl ttl-18 sub-title">Why Trust CreateBiz</h4>
-                <h2 class="ttl ttl-40 title">Take Your First Step with Your Trusted Partner</h2>
-                <p>We believe that the foundation of every successful business relationship is a perfect rapport built on trust and ease of communication. We are business advisors who prioritize this connection, providing straightforward and honest guidance to help our clients succeed.</p>
+                <h4 class="ttl ttl-18 sub-title">Why Trust CreateBiz?</h4>
+                <h2 class="ttl ttl-40 title">Our track record is our biggest testimony!</h2>
+                <p>Our comprehensive, personalized services empower our clients to make informed decisions, pushing the boundaries of what they thought was possible. We drive growth, aligning people and stakeholder expectations to facilitate innovative approaches. With over 15 years of experience in the field, we have what it takes to ensure your success.</p>
                
                 <div class="row align-items-center">
                   <div class="col-lg-6">
@@ -337,19 +369,18 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
                 <button class="ttl accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Accordion Item #1
+                  How can I start a business in Dubai?
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about.
-                </div>
+                  Dubai is a thriving center for business activities, and the kingdom is divided into different zones. Consult a business setup advisor like CreateBiz who will handle all the formalities and documentation of starting your business in the UAE, like getting you the necessary licenses, visas, bank accounts, and more.                </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="ttl accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Accordion Item #2
+                  Which is the best place for doing business in UAE?
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
