--- a/business-setup.html
+++ b/business-setup.html
@@ -87,7 +87,7 @@
         <div class="service-list-head">
           <h2 class="ttl ttl-40 title">Jurisdictions for Business Setup in UAE
           </h2>
-          <p>fsfsdfsfsdfsdfsfsdfdsf</p>
+          <p>Lorem ipsum dolor sit amet. Ut recusandae beatae ut dolor libero ab aspernatur neque est repellat quos sit quas nisi. Non delectus deleniti non laborum corporis et sequi laudantium aut magni cumque</p>
         </div>
         <div class="row">
           <div class="col-lg-4">
@@ -248,6 +248,7 @@
        <div class="container">
         <h2 class="ttl ttl-40 title">Process of Business Setup in UAE?
         </h2>
+        <p>Lorem ipsum dolor sit amet. Ut recusandae beatae ut dolor libero ab aspernatur neque est repellat quos sit quas nisi. Non delectus deleniti non laborum corporis et sequi laudantium aut magni cumque</p>
         <div class="timeline hide-line">
           <div class="timeline-container left">
             <a href="#" class="content-link">
