--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                   <div class="flip-card-front">
                     <figure>
-                      <img src="/assets/images/minland.webp" alt="minland">
+                      <img src="assets/images/minland.webp" alt="minland">
                     </figure>
                   </div>
                   <div class="flip-card-back">
@@ -131,7 +131,7 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     <figure>
-                      <img src="/assets/images/freezone.jpg" alt="minland">
+                      <img src="assets/images/freezone.jpg" alt="minland">
                     </figure>
                   </div>
                   <div class="flip-card-back">
@@ -154,7 +154,7 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     <figure>
-                      <img src="/assets/images/offshore.jpg" alt="minland">
+                      <img src="assets/images/offshore.jpg" alt="minland">
                     </figure>
                   </div>
                   <div class="flip-card-back">
@@ -471,10 +471,10 @@
             <div class="menu-items opener open">
               <h4 class="ttl menu-title">Company</h4>
               <ul class="toggle">
-                <li><a href="">About</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Faq</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="/about-us">About</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/faq">Faq</a></li>
+                <li><a href="/contact">Contact</a></li>
               </ul>
 
             </div>
@@ -487,11 +487,11 @@
               </ul>
             </div> -->
             <div class="menu-items opener">
-              <h4 class="ttl menu-title">Services</h4>
+              <h4 class="ttl menu-title">Business Setup</h4>
               <ul class="toggle">
-                <li><a href="" class="">servi 1</a></li>
-                <li><a href="">servi 2</a></li>
-                <li><a href="">servi 3</a></li>
+                <li><a href="/minland">Minland</a></li>
+                <li><a href="/freezone">Freezone</a></li>
+                <li><a href="/offshore">Offshore</a></li>
               </ul>
             </div>
             <div class="menu-items">
