--- a/contact.html
+++ b/contact.html
@@ -213,9 +213,9 @@
             <div class="menu-items opener">
               <h4 class="ttl menu-title">Services</h4>
               <ul class="toggle">
-                <li><a href="" class="">servi 1</a></li>
-                <li><a href="">servi 2</a></li>
-                <li><a href="">servi 3</a></li>
+                <li><a href="/minland">Minland</a></li>
+                <li><a href="/freezone">Freezone</a></li>
+                <li><a href="/offshore">Offshore</a></li>
               </ul>
             </div>
             <div class="menu-items">
